Fix text overflow breaking mat toolbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,9 +11,7 @@ p {
     margin: 0;
 }
 
-
 .toolbar {
-    height: 60px;
     display: flex;
     align-items: center;
     font-weight: 600;
@@ -26,7 +24,6 @@ p {
 .toolbar__site-logo {
     width: 50px;
     height: 50px;
-    margin: 0px 10px;
     background: white;
     padding: 2px;
     border-radius: 30px;
